# ising-cuda

./: .clang-format  .clang-tidy  .gitignore  Makefile  README.md  analysis.py  flake.nix  ising2d.c  ising2d.cu  isingnd.cpp  isingnd.cu  pyrightconfig.json  ruff.toml
nix/overlays/: nsight-compute-symlinks.nix
python/: CMakeLists.txt  flake.nix  package.nix  pyproject.toml
python/notebooks/: benchmark.ipynb  benchmark.py  flake.nix  ising2d.cu  isingnd.cu  main.py  spinning_up_custom_kernels_with_pallas.py
python/src/ising_mcmc/: cpu.cpp  cuda.cu  fm.cu  fm.cuh  fm_2d.cu  fm_2d.cuh  fm_nd.cuh  hypercube.cpp  hypercube.cu  hypercube.cuh  hypercube.hpp  twod.cu  twod.cuh
python/src/ising_mcmc/cpu/: fm.cpp  fm.hpp
python/src/ising_mcmc/cuda/: fm.cu  fm.cuh  fm_2d.cu  fm_2d.cuh  fm_nd.cuh  kernel_utils.cuh
python/src/ising_mcmc/jax/fm/: __init__.py
python/src/ising_mcmc/pallas/fm/: __init__.py
python/tests/: test_wrapper.py
