[build-system]
requires = ["scikit-build-core >= 0.5", "nanobind"]
build-backend = "scikit_build_core.build"

[project]
name = "ising-mcmc"
version = "0.1.0"
requires-python = ">=3.8"
dependencies = []

[project.optional-dependencies]
test = ["pytest"]

[tool.ruff.lint]
# https://docs.astral.sh/ruff/rules
select = [
  "E",
  "F",
  "I",
  "NPY",
  "UP",
  "RUF",
  "W",
]
ignore = [
  "E741", # Do not use variables named 'I', 'O', or 'l'
]

[tool.scikit-build]
minimum-version = "0.5"
build-dir = "build/{wheel_tag}"
editable.rebuild = true
